<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="movie_share" translatable="false">Share</string>
    <string name="movie_watchlist" translatable="false">Watchlist</string>
    <string name="movie_rating" translatable="false">Rating</string>
    <string name="movie_custom_list" translatable="false">Custom List</string>
    <string name="movie_favorite" translatable="false">Favorite</string>
    <string name="movie_rating_">Movie Rating</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="length">Length</string>
    <string name="status">Status</string>
    <string name="genre">Genre</string>
    <string name="production">Production</string>
    <string name="releted_movies">Related Movies</string>
    <string name="about_movie">About Movie</string>
    <string name="top_paid_casting">Top Paid Casting</string>
    <string name="videos">Videos</string>


    <string name="popular">Popular</string>
    <string name="discover">Discover</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="filter_title">Fillter</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_language">Language</string>
    <string name="filter_certification">Certification</string>
    <string name="filter_sort_by">Sort By</string>
    <string name="filter_adult">Include Adult</string>

    <string name="start_filter">Filter</string>
    <string name="filter_now">Filtering</string>
    <string name="empty_favorite_session">You choose your favorite sessions, then you can make a plan for you.</string>
    <string name="votes">Votes</string>
    <string name="read_more">Read More</string>
    <string name="known_for">Known For</string>
    <string name="known_credits">Known Credits</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="also_known_as">Also Known As</string>
    <string name="retry">Retry</string>
</resources>